# cppcoro

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Config.cmake.in  LICENSE.txt  README.md  appveyor.yml  args.cake  build-clang.sh  build-libcxx.sh  build.cake  cake.bat  config.cake  init.sh
.github/workflows/: cmake.yml
cmake/: FindCoroutines.cmake  FindCppcoroCoroutines.cmake  Findliburing.cmake  Finduring.cmake  config.cmake.in  cppcoroConfig.cmake  cppcoroConfig.cmake.in  geturing.cmake
examples/: CMakeLists.txt  hello_io_service.cpp  hello_tcp.cpp  hello_udp.cpp  read_file.cpp
include/: CMakeLists.txt  cppcoro.pc.in
include/cppcoro/: async_auto_reset_event.hpp  async_generator.hpp  async_latch.hpp  async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  async_stream.hpp  awaitable_traits.hpp  broken_promise.hpp  cancellation_registration.hpp  cancellation_source.hpp  cancellation_token.hpp  config.hpp  config_options.hpp  config_options.hpp.in  consume.hpp  coroutine.hpp  file.hpp  file_buffering_mode.hpp  file_open_mode.hpp  file_read_operation.hpp  file_share_mode.hpp  file_write_operation.hpp  filesystem.hpp  fmap.hpp  generator.hpp  inline_scheduler.hpp  io_service.hpp  is_awaitable.hpp  is_awaiter.hpp  lazy_task.hpp  multi_producer_sequencer.hpp  on_scope_exit.hpp  operation_cancelled.hpp  path.hpp  read_only_file.hpp  read_write_file.hpp  readable_file.hpp  recursive_generator.hpp  resume_on.hpp  (+19 more)
include/cppcoro/detail/: any.hpp  continuation.hpp  dummy_coroutine.hpp  get_awaiter.hpp  io_uring_context.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  linux.hpp  linux_async_operation.hpp  linux_uring_operation.hpp  manual_lifetime.hpp  remove_rvalue_reference.hpp  resumer.hpp  stdcoro.hpp  sync_wait_task.hpp  unwrap_reference.hpp  void_value.hpp  when_all_awaitable.hpp  when_all_awaitable2.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp  win32.hpp  win32_overlapped_operation.hpp
include/cppcoro/net/: ip_address.hpp  ip_endpoint.hpp  ipv4_address.hpp  ipv4_endpoint.hpp  ipv6_address.hpp  ipv6_endpoint.hpp  socket.hpp  socket_accept_operation.hpp  socket_connect_operation.hpp  socket_disconnect_operation.hpp  socket_recv_from_operation.hpp  socket_recv_operation.hpp  socket_send_operation.hpp  socket_send_to_operation.hpp
lib/: CMakeLists.txt  async_auto_reset_event.cpp  async_manual_reset_event.cpp  async_mutex.cpp  auto_reset_event.cpp  auto_reset_event.hpp  build.cake  cancellation_registration.cpp  cancellation_source.cpp  cancellation_state.cpp  cancellation_state.hpp  cancellation_token.cpp  file.cpp  file_read_operation.cpp  file_write_operation.cpp  io_service.cpp  io_uring.hpp  io_uring_context.cpp  ip_address.cpp  ip_endpoint.cpp  ipv4_address.cpp  ipv4_endpoint.cpp  ipv6_address.cpp  ipv6_endpoint.cpp  lightweight_manual_reset_event.cpp  linux.cpp  read_only_file.cpp  read_write_file.cpp  readable_file.cpp  socket.cpp  socket_accept_operation.cpp  socket_connect_operation.cpp  socket_disconnect_operation.cpp  socket_helpers.cpp  socket_helpers.hpp  socket_recv_from_operation.cpp  socket_recv_operation.cpp  socket_send_operation.cpp  socket_send_to_operation.cpp  spin_mutex.cpp  (+8 more)
test/: CMakeLists.txt  async_auto_reset_event_tests.cpp  async_generator_tests.cpp  async_latch_tests.cpp  async_manual_reset_event_tests.cpp  async_mutex_tests.cpp  async_stream_tests.cpp  build.cake  cancellation_token_tests.cpp  counted.cpp  counted.hpp  file_tests.cpp  generator_tests.cpp  io_service_fixture.hpp  io_service_tests.cpp  ip_address_tests.cpp  ip_endpoint_tests.cpp  ipv4_address_tests.cpp  ipv4_endpoint_tests.cpp  ipv6_address_tests.cpp  ipv6_endpoint_tests.cpp  lazy_task_tests.cpp  main.cpp  multi_producer_sequencer_tests.cpp  recursive_generator_tests.cpp  round_robin_scheduler_tests.cpp  scheduling_operator_tests.cpp  sequence_barrier_tests.cpp  shared_lazy_task_tests.cpp  shared_task_tests.cpp  single_consumer_async_auto_reset_event_tests.cpp  single_producer_sequencer_tests.cpp  socket_tests.cpp  static_thread_pool_tests.cpp  sync_wait_tests.cpp  task_tests.cpp  when_all_ready_tests.cpp  when_all_tests.cpp
test/doctest/: cppcoro_doctest.h  doctest.h
tools/cake_extensions/: testtool.py
tools/cmake/: build.cmd  build.sh
